--- a/content.less
+++ b/content.less
@@ -335,6 +335,8 @@ body > .content {
 	.arrow.downmod {
 		@x: -(@arrow-width * 2);
 		
+		margin-bottom: 2px;
+		
 		background-position: @x -@arrow-height !important;
 		
 		&::after {
